# yasem

./: .gitignore  README.md  pyproject.toml
tests/: test_splade_embedder.py
yasem/: splade_embedder.py
