[tool.poetry]
name = "yasem"
version = "0.1.0"
description = ""
authors = ["Yuichi Tateno <hotchpotch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
torch = ">=1.9.0"
transformers = ">=4.0.0"
numpy = ">=1.19.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
